--- a/ProjetoP2/.classpath
+++ b/ProjetoP2/.classpath
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
+	<classpathentry kind="src" path="testes"/>
 	<classpathentry exported="true" kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
 	<classpathentry exported="true" kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
-	<classpathentry kind="lib" path="/home/matheushcf/Downloads/easyaccept.jar"/>
+	<classpathentry kind="lib" path="/home/matheushcf/Downloads/easyaccept-1.0.3-jar/easyaccept.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
